syntax = "proto3";

package task_v1;

option go_package = "project_service/pkg/api/task_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTaskByID (GetTaskByIDRequest) returns (GetTaskByIDResponse) {}
  rpc GetTasksByProjectID (GetTasksByProjectIDRequest) returns (GetTasksByProjectIDResponse) {}
  rpc UpdateTask (UpdateTaskRequest) returns (google.protobuf.Empty) {}
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {}
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string project_id = 5;
  string executor_id = 6;
  google.protobuf.Timestamp deadline = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string project_id = 4;
  string executor = 5;
  google.protobuf.Timestamp deadline = 6;
}

message CreateTaskResponse {
  string id = 1;
}

message GetTaskByIDRequest {
  string id = 1;
}

message GetTaskByIDResponse {
  Task task = 1;
}

message GetTasksByProjectIDRequest {
  string project_id = 1;
}

message GetTasksByProjectIDResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string executor = 5;
  google.protobuf.Timestamp deadline = 6;
}

message UpdateTaskResponse {
  bool success = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}